# sandbox-mnist

./: .gitignore  README.md  pyproject.toml
runs/: modal_variance_full_best_val_model.pt
runs/conditioned_smoke/: best_val_model.pt  last_model.pt  metrics.json
runs/full_conditioned_noise_predictor/: best_val_model.pt
runs/full_noise_predictor/: best_val_model.pt  last_model.pt  metrics.json
runs/smoke_noise_predictor/: best_model.pt  last_model.pt  metrics.json
runs/validation_smoke/: best_val_model.pt  last_model.pt  metrics.json
src/mnist_hub/: __init__.py  build_datasets.py  iterate_conditioned_sampling.py  modal_train_noise_predictor.py  train_noise_predictor.py  visualize_noise_prediction.py
